--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 input_dir: "/path/to/fastqs/"
 output_dir: "/path/to/analysis/"
-metadata_file: "/pah/to/sample_metadata.tsv" ## or AI
+metadata_file: "/pah/to/sample_metadata.tsv"
